tests/miz/fail/parser/fail_parser_theorems_proofs_recovery_001.miz
theorem : thesis;
theorem MissingColon thesis;
theorem MissingFormula: by Ref;
theorem MissingProofEnd: thesis proof
  thus thesis;
theorem Next: thesis;
thus thesis proof
  thus thesis;
theorem AfterStatementProof: thesis;
